# nifty-50-trading-strategies

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_STATUS.txt  Pipfile  README.md  docker-compose.yml  mock_test_script.py  package.json  pyproject.toml  requirements.txt  test_real_trading.py  trade_engine.py  vercel.json
api/: index.py
backend/: Dockerfile  alerts.py  app.py  backtester.py  config.py  journal.py  telemetry.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
