[project]
name = "nexus-trade-api"
version = "1.0.0"
description = "Trading Engine API"
requires-python = "==3.12.*"
dependencies = [
    "pandas>=2.0.0",
    "pandas-ta==0.4.71b0",
    "numpy>=1.24.0,<2.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
